fix glu for UitestRunner