@@ -11,7 +11,7 @@ import java.util.Locale;
  */
 public class TestDataGenerator {
     
-    private static final Faker faker = new Faker(new Locale("en"));
+    private static final Faker faker = new Faker(Locale.of("en"));
     
     /**
      * Generate a random user with realistic data
